# snek

./: CMakeLists.txt
src/: main.cpp
